--- a/main_server/requirements.txt
+++ b/main_server/requirements.txt
@@ -1,14 +1,14 @@
-fastapi==0.112.0
-kafka_python==2.0.2
-langchain_community==0.2.10
-langchain_core==0.2.27
-langchain_groq==0.1.9
-langchain_openai==0.1.20
-langchain_pinecone==0.1.3
+fastapi==0.112.2
+langchain_community==0.2.14
+langchain_core==0.2.36
+langchain_openai==0.1.23
+langchain_qdrant==0.1.3
 langchain_text_splitters==0.2.2
-pydantic==2.8.2
-pymongo==4.5.0
-python-dotenv==1.0.1
-redis==5.0.7
-uvicorn==0.30.5
+passlib==1.7.4
 pika==1.3.2
+pydantic==2.8.2
+python-dotenv==1.0.1
+python_jose==3.3.0
+SQLAlchemy==2.0.30
+tiktoken==0.7.0
+uvicorn==0.30.6
