--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy Chatbot Application
 on:
   push:
     branches:
-      - main  # the branch trigger this workflow
+      - main
 
 jobs:
   deploy:
@@ -12,9 +12,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -31,9 +28,9 @@ jobs:
     - name: Build Docker images
       run: |
         cd main_server
-        sudo docker build -t chatbotmain .
+        sudo docker build --no-cache -t chatbotmain:${{ github.sha }} .
         cd ../processing_server
-        sudo docker build -t chatbotprocess .
+        sudo docker build --no-cache -t chatbotprocess:${{ github.sha }} .
 
     - name: Stop and remove running containers
       run: |
@@ -64,6 +61,9 @@ jobs:
         sudo docker run -it --rm --network chatbotnetwork --name rabbitmq-server \
           -d -p 5672:5672 -p 15672:15672 rabbitmq:3.13-management
         sudo docker run --network chatbotnetwork --name mysql -e MYSQL_ROOT_PASSWORD=12345678 -d mysql:latest
+        # Run newly built containers
+        sudo docker run --network chatbotnetwork --name chatbotmain -d chatbotmain:${{ github.sha }}
+        sudo docker run --network chatbotnetwork --name chatbotprocess -d chatbotprocess:${{ github.sha }}
 
     - name: Verify running containers
       run: |
