--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,90 +1,3 @@
-# name: CI/CD Pipeline for DigitalOcean Droplet
-
-# on:
-#   push:
-#     branches:
-#       - cicd
-
-# jobs:
-#   redeploy:
-#     runs-on: ubuntu-latest
-    
-#     steps:
-#       # Step 1: Checkout the code
-#       - name: Checkout code
-#         uses: actions/checkout@v3
-
-#       # Step 2: Set up SSH for DigitalOcean access
-#       - name: Set up SSH
-#         uses: webfactory/ssh-agent@v0.5.4
-#         with:
-#           ssh-private-key: ${{ secrets.SSH_KEY }}
-
-#       # Step 3: Determine which servers had changes
-#       - name: Check changes in files
-#         id: check_files
-#         run: |
-#           CHATBOT_MAIN_CHANGED=false
-#           CHATBOT_PROCESS_CHANGED=false
-
-#           if git diff --name-only HEAD^ HEAD | grep -q 'chatbotmain/'; then
-#             CHATBOT_MAIN_CHANGED=true
-#           fi
-
-#           if git diff --name-only HEAD^ HEAD | grep -q 'chatbotprocess/'; then
-#             CHATBOT_PROCESS_CHANGED=true
-#           fi
-
-#           echo "::set-output name=main_changed::${CHATBOT_MAIN_CHANGED}"
-#           echo "::set-output name=process_changed::${CHATBOT_PROCESS_CHANGED}"
-
-#       # Step 4: Deploy to the affected servers (both chatbotmain and chatbotprocess if needed)
-#       - name: Deploy to DigitalOcean
-#         run: |
-#           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.SSH_HOST }} << EOF
-#             # Check if chatbotmain needs to be redeployed
-#             if [ "${{ steps.check_files.outputs.main_changed }}" = "true" ]; then
-#               CONTAINER_ID=\$(sudo docker ps -q --filter "name=chatbotmain")
-#               if [ "\$CONTAINER_ID" ]; then
-#                 echo "Stopping and removing container chatbotmain..."
-#                 sudo docker stop \$CONTAINER_ID
-#                 sudo docker rm \$CONTAINER_ID
-
-#                 IMAGE_ID=\$(sudo docker images -q chatbotmain)
-#                 if [ "\$IMAGE_ID" ]; then
-#                   echo "Removing image chatbotmain..."
-#                   sudo docker rmi -f \$IMAGE_ID
-#                 fi
-#               fi
-
-#               echo "Rebuilding and running container chatbotmain..."
-#               sudo docker build -t chatbotmain .
-#               sudo docker run -d -p 8000:8000 chatbotmain
-#             fi
-
-#             # Check if chatbotprocess needs to be redeployed
-#             if [ "${{ steps.check_files.outputs.process_changed }}" = "true" ]; then
-#               CONTAINER_ID=\$(sudo docker ps -q --filter "name=chatbotprocess")
-#               if [ "\$CONTAINER_ID" ]; then
-#                 echo "Stopping and removing container chatbotprocess..."
-#                 sudo docker stop \$CONTAINER_ID
-#                 sudo docker rm \$CONTAINER_ID
-
-#                 IMAGE_ID=\$(sudo docker images -q chatbotprocess)
-#                 if [ "\$IMAGE_ID" ]; then
-#                   echo "Removing image chatbotprocess..."
-#                   sudo docker rmi -f \$IMAGE_ID
-#                 fi
-#               fi
-
-#               echo "Rebuilding and running container chatbotprocess..."
-#               sudo docker build -t chatbotprocess .
-#               sudo docker run -d -p 9000:9000 chatbotprocess
-#             fi
-#           EOF
-
-
-
 name: CI/CD Pipeline for DigitalOcean Droplet
 
 on:
@@ -111,15 +24,20 @@ jobs:
       - name: Check changes in files
         id: check_files
         run: |
+          # Initialize change flags
           CHATBOT_MAIN_CHANGED=false
           CHATBOT_PROCESS_CHANGED=false
 
-          # Compare changes using GitHub's event context for the previous commit
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q 'chatbotmain/'; then
+          # Get list of changed files
+          CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
+
+          # Check if any changed files are in the chatbotmain directory
+          if echo "$CHANGED_FILES" | grep -q '^chatbotmain/'; then
             CHATBOT_MAIN_CHANGED=true
           fi
 
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q 'chatbotprocess/'; then
+          # Check if any changed files are in the chatbotprocess directory
+          if echo "$CHANGED_FILES" | grep -q '^chatbotprocess/'; then
             CHATBOT_PROCESS_CHANGED=true
           fi
 
@@ -176,4 +94,3 @@ jobs:
         env:
           main_changed: ${{ steps.check_files.outputs.main_changed }}
           process_changed: ${{ steps.check_files.outputs.process_changed }}
-
