--- a/main_server/requirements.txt
+++ b/main_server/requirements.txt
@@ -18,3 +18,8 @@ redis==5.0.7
 mailjet-rest==1.3.4
 Jinja2==3.1.4
 python-multipart==0.0.9
+pytz==2022.1
+google-auth==2.28.1
+google-auth-oauthlib==1.2.0
+google-api-python-client==2.133.0
+python-dateutil==2.8.2
