--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "chatbot-admin",
+  "name": "jelly",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.0",
-    "@mui/x-data-grid": "^7.16.0",
+    "@mui/material": "^6.1.2",
+    "@mui/x-data-grid": "^7.19.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "axios": "^1.7.5",
+    "ajv": "^8.17.1",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
-    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-lottie": "^1.2.4",
-    "react-router-dom": "^6.26.1",
+    "react-lotties": "^0.3.2",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.30.2",
-    "react-slider": "^2.0.6",
     "recharts": "^2.12.7",
-    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -54,7 +49,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
